move seller name param to query
